--- a/2023_Graduate_Project/View/Base.lproj/LaunchScreen.storyboard
+++ b/2023_Graduate_Project/View/Base.lproj/LaunchScreen.storyboard
@@ -17,11 +17,8 @@
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
-                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="dsuFullLogo" translatesAutoresizingMaskIntoConstraints="NO" id="IyO-A5-xb5">
-                                <rect key="frame" x="10" y="74" width="373" height="240"/>
-                            </imageView>
                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spannerImage" translatesAutoresizingMaskIntoConstraints="NO" id="Ap6-uc-h4i">
-                                <rect key="frame" x="20" y="334" width="353" height="150"/>
+                                <rect key="frame" x="20" y="363.66666666666669" width="353" height="150.00000000000006"/>
                                 <constraints>
                                     <constraint firstAttribute="height" constant="150" id="O8r-Zj-fXg"/>
                                 </constraints>
@@ -31,11 +28,9 @@
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                         <constraints>
                             <constraint firstItem="Ap6-uc-h4i" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="20" id="69n-hv-kba"/>
-                            <constraint firstItem="IyO-A5-xb5" firstAttribute="top" secondItem="6Tk-OE-BBY" secondAttribute="top" constant="15" id="796-Bh-Ukc"/>
-                            <constraint firstItem="IyO-A5-xb5" firstAttribute="leading" secondItem="6Tk-OE-BBY" secondAttribute="leading" constant="10" id="AhV-C5-86M"/>
-                            <constraint firstItem="Ap6-uc-h4i" firstAttribute="top" secondItem="IyO-A5-xb5" secondAttribute="bottom" constant="20" id="VWf-em-mB2"/>
+                            <constraint firstItem="Ap6-uc-h4i" firstAttribute="centerX" secondItem="6Tk-OE-BBY" secondAttribute="centerX" id="ISu-PH-p7X"/>
                             <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="Ap6-uc-h4i" secondAttribute="trailing" constant="20" id="XMJ-oD-pNA"/>
-                            <constraint firstItem="6Tk-OE-BBY" firstAttribute="trailing" secondItem="IyO-A5-xb5" secondAttribute="trailing" constant="10" id="Zh9-un-hoR"/>
+                            <constraint firstItem="Ap6-uc-h4i" firstAttribute="centerY" secondItem="6Tk-OE-BBY" secondAttribute="centerY" id="tMd-GV-WeX"/>
                         </constraints>
                     </view>
                 </viewController>
@@ -45,7 +40,6 @@
         </scene>
     </scenes>
     <resources>
-        <image name="dsuFullLogo" width="787.33331298828125" height="240"/>
         <image name="spannerImage" width="360" height="360"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
