--- a/2023_Graduate_Project/View/Splash.storyboard
+++ b/2023_Graduate_Project/View/Splash.storyboard
@@ -16,8 +16,22 @@
                     <view key="view" contentMode="scaleToFill" id="nJJ-F8-eLj">
                         <rect key="frame" x="0.0" y="0.0" width="393" height="852"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="spannerImage" translatesAutoresizingMaskIntoConstraints="NO" id="74K-hM-mYk">
+                                <rect key="frame" x="20" y="363.66666666666669" width="353" height="150.00000000000006"/>
+                                <constraints>
+                                    <constraint firstAttribute="height" constant="150" id="Ob4-fX-EzE"/>
+                                </constraints>
+                            </imageView>
+                        </subviews>
                         <viewLayoutGuide key="safeArea" id="8QO-lb-lvy"/>
                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="74K-hM-mYk" firstAttribute="leading" secondItem="8QO-lb-lvy" secondAttribute="leading" constant="20" id="0gz-eX-7t1"/>
+                            <constraint firstItem="8QO-lb-lvy" firstAttribute="trailing" secondItem="74K-hM-mYk" secondAttribute="trailing" constant="20" id="25W-28-zXf"/>
+                            <constraint firstItem="74K-hM-mYk" firstAttribute="centerX" secondItem="8QO-lb-lvy" secondAttribute="centerX" id="DJk-Tb-M1W"/>
+                            <constraint firstItem="74K-hM-mYk" firstAttribute="centerY" secondItem="8QO-lb-lvy" secondAttribute="centerY" id="slr-WM-CbF"/>
+                        </constraints>
                     </view>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="62W-1s-hXu" userLabel="First Responder" sceneMemberID="firstResponder"/>
@@ -26,6 +40,7 @@
         </scene>
     </scenes>
     <resources>
+        <image name="spannerImage" width="360" height="360"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
         </systemColor>
